# Flute

./: README.md
LoRa_433MHz/AsTAR++/OutdoorAsTAR++/: OutdoorAsTAR++.ino
LoRa_433MHz/Standard_AsTAR/: Standard AsTAR.ino
Source code/LTE-M/AsTAR++/battery_free_flooding/: Kconfig  prj.conf
Source code/LTE-M/AsTAR++/battery_free_flooding/child_image/: spm.conf
Source code/LTE-M/AsTAR++/battery_free_flooding/include/: battery.h
Source code/LTE-M/AsTAR++/battery_free_flooding/src/: battery.c  main.c  modem.c
Source code/LTE-M/Traditional_AsTAR/: README.md
Source code/LTE-M/Traditional_AsTAR/battery_free_flooding/: Kconfig  circuitdojo_feather_nrf9160_ns.overlay
Source code/LTE-M/Traditional_AsTAR/battery_free_flooding/include/: modem.h
Source code/LTE-M/Traditional_AsTAR/battery_free_flooding/src/: modem.c
Source code/LTE-M/battery_free_flooding/: CMakeLists.txt
Source code/LTE-M/battery_free_flooding/src/: main.c
Source code/LoRa 433Mhz/AsTAR++/AsTAR++ Gateway/: LoRaGateway2_433MHz_101105.py
Source code/LoRa 433Mhz/Traditional_AsTAR/AsTAR Gateway/: LoRaGateway1_434MHz_15.py
Source code/LoRa AsTAR++/AsTAR++ Gateway/: LoRaGateway2_433MHz_101105.py
Source code/LoRa AsTAR++/IndoorAsTAR++/: IndoorAsTAR++.ino
Source code/LoRa Standard_AsTAR/AsTAR Gateway/: LoRaGateway1_434MHz_15.py
Source code/LoRa433MHz_ Gateway/: LoRa433MHz_ Gateway.py
Source code/LoRa433MHz_Gateway/: LoRa433MHz_ Gateway.py
